name: poly
version: 0.3.3.0
synopsis: Polynomials
description:
  Polynomials backed by `Vector`.
homepage: https://github.com/Bodigrim/poly#readme
license: BSD3
license-file: LICENSE
author: Andrew Lelechenko
maintainer: andrew.lelechenko@gmail.com
copyright: 2019 Andrew Lelechenko
category: Math, Numerical
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10
tested-with: GHC ==8.0.2 GHC ==8.2.2 GHC ==8.4.4 GHC ==8.6.5 GHC ==8.8.1
extra-source-files:
  changelog.md

source-repository head
  type: git
  location: https://github.com/Bodigrim/poly

library
  hs-source-dirs: src
  exposed-modules:
    Data.Poly
    Data.Poly.Semiring
    Data.Poly.Sparse
    Data.Poly.Sparse.Semiring
  other-modules:
    Data.Poly.Internal.Dense
    Data.Poly.Internal.Dense.Field
    Data.Poly.Internal.Dense.GcdDomain
    Data.Poly.Internal.PolyOverField
    Data.Poly.Internal.Sparse
    Data.Poly.Internal.Sparse.Field
    Data.Poly.Internal.Sparse.GcdDomain
  build-depends:
    base >= 4.9 && < 5,
    deepseq >= 1.1 && < 1.5,
    primitive >= 0.6,
    semirings >= 0.2,
    vector >= 0.12.0.2,
    vector-algorithms >= 0.7
  default-language: Haskell2010
  ghc-options: -Wall

test-suite poly-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    Dense
    Quaternion
    Sparse
  build-depends:
    base >=4.9 && <5,
    poly,
    QuickCheck >=2.12,
    quickcheck-classes >=0.5,
    semirings >= 0.2,
    tasty >= 0.11,
    tasty-quickcheck >= 0.8,
    vector >= 0.12.0.2
  default-language: Haskell2010
  hs-source-dirs: test
  ghc-options: -Wall

benchmark poly-gauge
  build-depends:
    base >=4.9 && <5,
    deepseq >= 1.1 && < 1.5,
    gauge >= 0.1,
    poly,
    semirings >= 0.2,
    vector >= 0.12.0.2
  type: exitcode-stdio-1.0
  main-is: Bench.hs
  other-modules:
    DenseBench
    SparseBench
  default-language: Haskell2010
  hs-source-dirs: bench
  ghc-options: -Wall
