name: poly
version: 0.4.0.0
synopsis: Polynomials
description:
  Polynomials backed by `Vector`.
homepage: https://github.com/Bodigrim/poly#readme
license: BSD3
license-file: LICENSE
author: Andrew Lelechenko
maintainer: andrew.lelechenko@gmail.com
copyright: 2019-2020 Andrew Lelechenko
category: Math, Numerical
build-type: Simple
cabal-version: >=1.10
tested-with: GHC ==8.0.2 GHC ==8.2.2 GHC ==8.4.4 GHC ==8.6.5 GHC ==8.8.4 GHC ==8.10.2
extra-source-files:
  changelog.md
  README.md

source-repository head
  type: git
  location: https://github.com/Bodigrim/poly

library
  hs-source-dirs: src
  exposed-modules:
    Data.Poly
    Data.Poly.Laurent
    Data.Poly.Orthogonal
    Data.Poly.Semiring
    Data.Poly.Sparse
    Data.Poly.Sparse.Laurent
    Data.Poly.Sparse.Multi
    Data.Poly.Sparse.Semiring
  other-modules:
    Data.Poly.Internal.Convert
    Data.Poly.Internal.Dense
    Data.Poly.Internal.Dense.Field
    Data.Poly.Internal.Dense.DFT
    Data.Poly.Internal.Dense.GcdDomain
    Data.Poly.Internal.Dense.Laurent
    Data.Poly.Internal.Sparse
    Data.Poly.Internal.Sparse.Field
    Data.Poly.Internal.Sparse.GcdDomain
    Data.Poly.Internal.Sparse.Laurent
  build-depends:
    base >= 4.9 && < 5,
    deepseq >= 1.1 && < 1.5,
    finite-typelits >= 0.1,
    primitive >= 0.6,
    semirings >= 0.5.2,
    vector >= 0.12.0.2,
    vector-algorithms >= 0.8.0.3,
    vector-sized >= 1.1
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Wredundant-constraints

test-suite poly-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    Dense
    DenseLaurent
    DFT
    Multi
    Orthogonal
    Quaternion
    Sparse
    SparseLaurent
    TestUtils
  build-depends:
    base >=4.9 && <5,
    finite-typelits,
    mod,
    poly,
    QuickCheck >=2.12,
    quickcheck-classes >=0.6.3,
    semirings >= 0.5.2,
    tasty >= 0.11,
    tasty-quickcheck >= 0.8,
    vector >= 0.12.0.2,
    vector-sized >= 1.1
  default-language: Haskell2010
  hs-source-dirs: test
  ghc-options: -Wall -Wcompat -threaded -rtsopts

test-suite poly-doctests
  type:             exitcode-stdio-1.0
  main-is:          doctests.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  build-depends:
      base,
      poly,
      doctest

benchmark poly-gauge
  build-depends:
    base >=4.9 && <5,
    deepseq >= 1.1 && < 1.5,
    gauge >= 0.1,
    mod,
    poly,
    semirings >= 0.2,
    vector >= 0.12.0.2
  type: exitcode-stdio-1.0
  main-is: Bench.hs
  other-modules:
    DenseBench
    SparseBench
  default-language: Haskell2010
  hs-source-dirs: bench
  ghc-options: -Wall -Wcompat
